[package]
name = "splash-damage"
version = "0.1.0"
edition = "2024"

[dependencies]
evdev = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
zbus = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.29", features = ["user"] }
anyhow = "1"
dirs = "6"
